Compiler_Project/rsc/tests/typecheck/valid/appTe.ml
let rec sum x y =
    let z = x+y in
    z
in
print_int (sum 1 1)
