Compiler_Project/rsc/tests/typecheck/invalid/3printint_letrec_float.ml
let rec sum a = a+3.14 in
print_int (sum 10)
